# DjangoCustomLog

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
DjangoCustomLog/: asgi.py  gunicorn.py  settings.py  urls.py  wsgi.py
custom_log/: __init__.py  filters.py  log.py  logger.py  middleware.py
custom_log/utils/: base_task.py  log_other_service.py  request_id_generator.py
